--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,2 @@
-[] - Вынести логику получения юзера за рамки auth service 
-[] - Обьединить byId, bySlug
-[] - Доп проверка на существование товара когда создаем отзыв
-[] - Закончить статистику
-[] - Доп проверка на существование категории когда создаем товар
+[] - Создать админ панель
+[] - Добавить средний рейтинг в карточку товара
